--- a/Frontend/src/components/Maps.scss
+++ b/Frontend/src/components/Maps.scss
@@ -7,8 +7,6 @@ body {
 }
 
 #map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
+  height: 100%;
   width: 100%;
 }
